<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Squeezer</string>
    <string name="execute_always">Always</string>
    <string name="execute_just_once">Just once</string>
    <string name="undo">Undo</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="disabled">Disabled</string>
    <string name="volume">%s volume</string>
    <string name="menu_item_players">Players</string>
    <string name="menu_item_search_label">Search</string>
    <string name="menu_item_settings_label">Settings</string>
    <string name="menu_item_about_label">About</string>
    <string name="activity_settings_name">Settings</string>
    <string name="pref_cat_server">Server settings</string>
    <string name="settings_serveraddr_title">Server Address</string>
    <string name="settings_serveraddr_summary">IP address or name of Squeezebox Server, e.g.
        10.0.0.5.
    </string>
    <string name="settings_serveraddr_hint">Name or IP address of server</string>
    <string name="settings_server_prompt">Choose a server</string>
    <string name="settings_server_rescan">Rescan</string>
    <string name="settings_server_scanning_disabled_msg">Scanning is disabled, because Wi-Fi is not
        connected.
    </string>
    <string name="settings_theme_title">Theme</string>
    <string name="settings_theme_dark">Dark</string>
    <string name="settings_theme_light_dark">Light, dark action bar</string>
    <string name="settings_username_hint">User name (optional)</string>
    <string name="settings_password_hint">Password (optional)</string>
    <string name="settings_server_scan_progress">Scanning for servers&#8230;</string>
    <string name="settings_fadeinsecs_title">Fade in duration</string>
    <string name="settings_fadeinsecs_summary">Enter the amount of time to take to fade in when
        unpausing, in seconds. Enter 0 to disable fade in.
    </string>
    <string name="settings_autoconnect_title">Auto-connect</string>
    <string name="settings_autoconnect_summary">Offer to enable Wi-Fi, and on Wi-Fi availability,
        try to connect
    </string>
    <string name="settings_notification_type_title">Notifications</string>
    <string name="settings_notification_type_none">Never</string>
    <string name="settings_notification_type_playing">Only while playing music
    </string>
    <string name="settings_notification_type_always">While connected, even when not
        playing music
    </string>
    <string name="settings_scrobble_title">Scrobble to Last.fm</string>
    <string name="settings_scrobble_on">Song information is sent to Last.fm</string>
    <string name="settings_scrobble_off">Song information is not sent to Last.fm</string>
    <string name="settings_scrobble_noapp">No apps that can scrobble are installed</string>
    <string name="settings_market_not_found">Could not start Google Play, is it installed?</string>
    <string name="settings_squeezeplayer_title">Start SqueezePlayer</string>
    <string name="settings_squeezeplayer_summary">Check this option to make sure SqueezePlayer is running, when using Squeezer</string>
    <string name="settings_category_ui">Squeezer interface</string>
    <string name="menu_item_disconnect">Disconnect</string>
    <string name="menu_item_connect">Connect</string>
    <string name="menu_item_poweron">Turn on \"%s\"</string>
    <string name="menu_item_poweroff">Turn off \"%s\"</string>
    <string name="menu_item_main">Now playing</string>
    <string name="menu_item_home">Main Menu</string>
    <string name="menu_item_fetch_all">Fetch remaining</string>
    <string name="menu_item_filter">Filter</string>
    <string name="menu_item_sort">Sort order</string>
    <string name="menu_item_view">View</string>
    <string name="menu_item_delete">Delete</string>
    <string name="menu_item_rename">Rename</string>
    <string name="menu_item_playlist">Playlist</string>
    <string name="menu_item_playlists_new">New</string>
    <string name="menu_item_playlist_clear">Clear playlist</string>
    <string name="menu_item_playlist_save">Save as playlist</string>
    <string name="menu_item_playlist_show_current_song">Go to current song</string>
    <string name="menu_item_volume">Change volume</string>
    <string name="connecting_text">Connecting</string>
    <string name="connect_to_text">Connect to %s</string>
    <string name="connecting_to_text">Connecting to SqueezeBox CLI at %s</string>
    <string name="connection_failed_text">Connection failed. Check settings.</string>
    <string name="not_connected">Squeezer is not connected to any Squeezeservers.</string>
    <string name="select_server">Or select one the servers below.</string>
    <string name="login_failed_text">Login failed. Make sure the correct port, user name and password is entered.</string>
    <string name="login_failed_info_text">
        &lt;p&gt;You find the correct values in the server\'s web-interface. Select settings and the Advanced tab.&lt;/p&gt;
        &lt;p&gt;To check the port number select Command Line Interface (CLI) in the dropdown.&lt;/p&gt;
        &lt;p&gt;User name and password is found by selecting security in the dropdown.&lt;/p&gt;
    </string>
    <string name="disconnected_text">Disconnected.</string>
    <string name="wifi_disabled_text">Wi-Fi is disabled</string>
    <string name="enable_wifi_text">This will turn on Wi-Fi on your Android device. When an active
        Wi-Fi connection is made, Squeezer will automatically try to connect to your SqueezeBox
        Server. Turn on Wi-Fi now?
    </string>
    <string name="wifi_enabled_text">Wi-Fi is enabled. Please wait for an active Wi-Fi connection.
    </string>
    <string name="notification_playing_text">%s playing</string>
    <string name="notification_connected_text">%s connected</string>
    <string name="filter_text_hint">Search %s</string>
    <string name="search_text_hint">Enter search text</string>
    <string name="search_music_library_hint">Search artist, album, genre or song title.</string>
    <string name="move_to_dialog_title">Move song number %d</string>
    <string name="move_to_index_hint">Enter new position for song</string>
    <string name="save_playlist_title">Save playlist</string>
    <string name="save_playlist_hint">Enter name of playlist</string>
    <string name="new_playlist_title">New playlist</string>
    <string name="new_playlist_hint">Enter name of playlist</string>
    <string name="rename_title">Rename %s</string>
    <string name="sync_title">Synchronize %s to…</string>
    <string name="delete_title">Delete %s</string>
    <string name="delete__message">Are you sure to delete?</string>
    <string name="loading_text">Loading&#8230;</string>
    <string name="browse_items_text">%2$d %1$s</string>
    <string name="choose_sort_order">Choose ordering of %s</string>
    <string name="genre_prompt">Choose genre</string>
    <string name="year_prompt">Choose year</string>
    <string name="track_label">Track</string>
    <string name="artist_label">Artist</string>
    <string name="album_label">Album</string>
    <string name="genre_label">Genre</string>
    <string name="year_label">Year</string>
    <string name="filter_label">Search text</string>
    <string name="lyrics_label">Lyrics</string>
    <string name="player_group_header">Group: %s</string>
    <string name="menu_item_player_sync">Synchronize…</string>
    <string name="menu_item_player_unsync">No synchronization</string>
    <string name="no_players_connected">No players are connected.</string>
    <string name="player_list_changed">Connected players changed while context menu was open,
        ignoring request</string>
    <string name="albums_by_artist_header">Albums with songs by %s</string>
    <string name="albums_by_genre_header">Albums with songs in genre \"%s\"</string>
    <string name="albums_by_year_header">Albums with songs from %s</string>
    <string name="songs_by_header">Songs by %s</string>
    <string name="unknown_track">Unknown track</string>
    <string name="unknown_album">Unknown album</string>
    <string name="unknown_artist">Unknown artist</string>
    <string name="unknown_artistalbum">Unknown artist/album</string>
    <string name="unknown_year">Unknown year</string>
    <string name="all_alarms_on_hint">Individual alarms can be enabled</string>
    <string name="all_alarms_off_hint">All alarms are disabled</string>
    <string name="alarm_music_prompt">Music for alarm</string>
    <string name="alarms_settings_dialog_title">%s alarm settings</string>
    <string name="alarm_volume_text">Alarm volume</string>
    <string name="alarm_snooze_duration_text">Snooze duration</string>
    <plurals name="alarm_snooze_hint_text">
        <item quantity="one">Alarms snooze for %d minute</item>
        <item quantity="other">Alarms snooze for %d minutes</item>
    </plurals>
    <string name="alarm_timeout_text">Alarm timeout</string>
    <string name="alarm_timeout_hint_text_zero">Alarms play indefinitely</string>
    <plurals name="alarm_timeout_hint_text">
        <item quantity="one">Alarms stop after %d minute</item>
        <item quantity="other">Alarms stop after %d minutes</item>
    </plurals>
    <string name="alarm_fade_text">Fade alarms up</string>
    <string name="alarm_fade_on_text">Alarms will fade in</string>
    <string name="alarm_fade_off_text">Alarms will not fade in</string>
    <string name="tips_title">Tips</string>
    <string name="tip_volume">Use your device\'s hardware volume controls to change the playing
        volume.\n\nTry it now.
    </string>
    <string name="server_error">%1$s reported an error: \"%2$s\".</string>
    <string name="menu_item_power_off">Turn off</string>
    <string name="menu_item_power_on">Turn on</string>
    <string name="dialog_license">License</string>
    <string name="copyright_text">Copyright &#169; 2009 Google Inc. All Rights Reserved\nCopyright
        &#169; 2011 Kurt Aaholst. All Rights Reserved.
    </string>
    <string name="BROWSE_SONGS">Browse songs</string>
    <string name="BROWSE_SONGS_BY_ITEM">Browse songs by %s</string>
    <string name="BROWSE_ARTISTS">Browse artists</string>
    <string name="BROWSE_ALBUM_SONGS">Browse songs on album</string>
    <string name="BROWSE_ARTIST_ALBUMS">Browse albums with songs by artist</string>
    <string name="BROWSE_ARTIST_SONGS">Browse songs by artist</string>
    <string name="PLAY_NOW">Play</string>
    <string name="ADD_TO_END">Add to playlist</string>
    <string name="PLAY_NEXT">Play after the current song</string>
    <string name="PLAYLIST_MOVE_UP">Move up</string>
    <string name="PLAYLIST_MOVE_DOWN">Move down</string>
    <string name="PLAYLIST_MOVE">Move&#8230;</string>
    <string name="pref_cat_error_reports">Error reports and statistics</string>
    <string name="pref_analytics_enable">Send usage statistics</string>
    <string name="pref_analytics_enable_enabled">Anonymous usage statistics are collected using
        Google Analytics.
    </string>
    <string name="pref_analytics_enable_disabled">No usage statistics are collected.</string>
    <string name="pref_cat_third_party">Third-party integration</string>
</resources>