<?xml version="1.0" encoding="utf-8"?>

<!--
   Copyright (C) 2009 Google Inc.  All Rights Reserved.

   Licensed under the Apache License, Version 2.0 (the "License");
   you may not use this file except in compliance with the License.
   You may obtain a copy of the License at

        http://www.apache.org/licenses/LICENSE-2.0

   Unless required by applicable law or agreed to in writing, software
   distributed under the License is distributed on an "AS IS" BASIS,
   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
   See the License for the specific language governing permissions and
   limitations under the License.
-->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:squeezer="http://schemas.android.com/apk/res-auto">
    <item
        android:icon="@drawable/ic_menu_search"
        android:id="@+id/menu_item_search"
        android:title="@string/menu_item_search_label"
        android:alphabeticShortcut="s"
        squeezer:showAsAction="ifRoom"
        android:orderInCategory="0"/>

    <item
        android:id="@+id/menu_item_playlist"
        android:title="@string/menu_item_playlist"
        android:alphabeticShortcut="p"
        android:icon="@drawable/ic_menu_playlist"
        squeezer:showAsAction="always|withText"
        android:orderInCategory="1"/>

    <item
        android:id="@+id/menu_item_players"
        android:title="@string/menu_item_players"
        android:alphabeticShortcut="z"
        android:icon="@drawable/ic_menu_choose_player"
        squeezer:showAsAction="ifRoom|withText"/>

    <item
        android:id="@+id/menu_item_alarm"
        android:title="Alarm Clock"
        android:alphabeticShortcut="z"
        android:icon="@android:drawable/ic_lock_idle_alarm"
        squeezer:showAsAction="ifRoom"/>

    <item
        android:id="@+id/menu_item_poweron"
        android:title="@string/menu_item_poweron"
        android:icon="@android:drawable/ic_lock_power_off"/>

    <item
        android:id="@+id/menu_item_poweroff"
        android:title="@string/menu_item_poweroff"
        android:icon="@android:drawable/ic_lock_power_off"/>

    <item
        android:id="@+id/menu_item_connect"
        android:icon="@drawable/presence_online"
        android:title="@string/menu_item_connect"
        android:alphabeticShortcut="c"
        squeezer:showAsAction="never|withText"/>

    <item
        android:id="@+id/menu_item_disconnect"
        android:icon="@android:drawable/ic_menu_close_clear_cancel"
        android:title="@string/menu_item_disconnect"
        android:alphabeticShortcut="d"/>

    <!-- Force these to the bottom of the menu. -->

    <item
        android:icon="@android:drawable/ic_menu_preferences"
        android:id="@+id/menu_item_settings"
        android:title="@string/menu_item_settings_label"
        android:alphabeticShortcut="p"
        android:orderInCategory="99"/>

    <item
        android:icon="@android:drawable/ic_menu_info_details"
        android:id="@+id/menu_item_about"
        android:title="@string/menu_item_about_label"
        android:alphabeticShortcut="a"
        android:orderInCategory="100"/>
</menu>
