<?xml version="1.0" encoding="utf-8"?>

<!--
 Copyright (c) 2012 Google Inc.  All Rights Reserved.

 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
 You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

 Unless required by applicable law or agreed to in writing, software
 distributed under the License is distributed on an "AS IS" BASIS,
 WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:orientation="vertical"
    style=""
    android:padding="16dp">

    <LinearLayout
        android:id="@+id/scan_progress"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:paddingLeft="8dp"
            android:text="@string/settings_server_scan_progress"
            />
    </LinearLayout>

    <TextView
        android:id="@+id/scan_disabled_msg"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="4dp"
        android:text="@string/settings_server_scanning_disabled_msg"
        android:textAppearance="@style/SqueezerTextAppearance.Medium"/>

    <LinearLayout
        android:id="@+id/scan_results"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/scan_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:drawableLeftCompat="@drawable/refresh"
            android:text="@string/settings_server_rescan"/>

        <TextView
            android:id="@+id/server_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingLeft="8dp"
            android:visibility="gone"
            android:text="@string/settings_manual_serveraddr"
            android:textAppearance="@style/SqueezerTextAppearance.Medium"/>

        <Spinner
            android:id="@+id/found_servers"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:prompt="@string/settings_server_prompt"/>
    </LinearLayout>

    <RadioButton
        android:id="@+id/squeezeServer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Local server" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/server_address_til"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:paddingStart="8dp"
        android:hint="@string/settings_serveraddr_hint">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/server_address"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textNoSuggestions"
            android:paddingBottom="4dp"
            android:paddingTop="4dp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/username_til"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="8dp"
        android:layout_marginTop="16dp"
        android:hint="@string/settings_username_hint">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/username"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textNoSuggestions"
            android:paddingBottom="4dp"
            android:paddingTop="4dp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="8dp"
        android:layout_marginTop="16dp"
        android:hint="@string/settings_password_hint">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:paddingBottom="4dp"
            android:paddingTop="4dp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <RadioButton
        android:id="@+id/squeezeNetwork"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="mysqueezebox.com" />

</LinearLayout>
