<?xml version="1.0" encoding="utf-8"?>

<!--
 Copyright (c) 2011 Kurt Aaholst <kaaholst@gmail.com>

 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
 You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

 Unless required by applicable law or agreed to in writing, software
 distributed under the License is distributed on an "AS IS" BASIS,
 WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
-->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout android:id="@+id/filterview"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingBottom="4dp"
        android:paddingTop="4dp">

        <LinearLayout
            android:id="@+id/track_view"
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:visibility="gone">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/track_label"
                android:paddingBottom="4dp"
                android:paddingTop="4dp"/>

            <EditText
                android:id="@+id/track"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:focusable="false"
                android:inputType="none"
                android:paddingBottom="4dp"
                android:paddingTop="4dp"/>
        </LinearLayout>

        <LinearLayout android:id="@+id/artist_view"
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:visibility="gone">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/artist_label"
                android:paddingBottom="4dp"
                android:paddingTop="4dp"/>

            <EditText android:id="@+id/artist"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:focusable="false"
                android:inputType="none"
                android:paddingBottom="4dp"
                android:paddingTop="4dp"/>
        </LinearLayout>

        <LinearLayout android:id="@+id/album_view"
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:visibility="gone">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/album_label"
                android:paddingBottom="4dp"
                android:paddingTop="4dp"/>

            <uk.org.ngo.squeezer.widget.FloatLabelLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:floatLabelTextAppearance="@style/SqueezerTextAppearance.FloatLabel"
                app:floatLabelTrigger="text">

                <EditText
                    android:id="@+id/album"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:focusable="false"
                    android:inputType="none"
                    android:paddingBottom="4dp"
                    android:paddingTop="4dp" />
            </uk.org.ngo.squeezer.widget.FloatLabelLayout>
        </LinearLayout>

        <uk.org.ngo.squeezer.widget.FloatLabelLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:floatLabelTextAppearance="@style/SqueezerTextAppearance.FloatLabel"
            app:floatLabelTrigger="text">

            <EditText
                android:id="@+id/search_string"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/filter_text_hint"
                android:inputType="textNoSuggestions"
                android:paddingBottom="4dp"
                android:paddingTop="4dp" />
        </uk.org.ngo.squeezer.widget.FloatLabelLayout>

        <LinearLayout
            android:id="@+id/genre_view"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:minHeight="48dp">

            <TextView
                android:id="@+id/genre_hint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="4dp"
                android:paddingRight="4dp"
                android:paddingTop="4dp"
                android:text="@string/genre_label" />

            <Spinner
                android:id="@+id/genre_spinner"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:prompt="@string/genre_prompt" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/year_view"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:minHeight="48dp">

            <TextView
                android:id="@+id/year_hint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="4dp"
                android:paddingRight="4dp"
                android:paddingTop="4dp"
                android:text="@string/year_label" />

            <Spinner
                android:id="@+id/year_spinner"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:prompt="@string/year_prompt" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
