<?xml version="1.0" encoding="utf-8"?>

<!--
 Copyright (c) 2011 Kurt Aaholst <kaaholst@gmail.com>

 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
 You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

 Unless required by applicable law or agreed to in writing, software
 distributed under the License is distributed on an "AS IS" BASIS,
 WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
-->

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/song_name"
        android:paddingTop="8dp"
        android:gravity="center_horizontal"
        style="@style/SqueezerWidget.Lyrics.SongName"
        tools:text="@string/unknown_track"/>

    <TextView
        android:id="@+id/artist_album"
        android:paddingTop="4dp"
        android:gravity="center_horizontal"
        style="@style/SqueezerWidget.Lyrics.AlbumName"
        tools:text="@string/unknown_artistalbum"/>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingTop="8dp">
        <TextView
            android:id="@+id/lyrics"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textAppearance="@style/SqueezerTextAppearance.Small"
            tools:text="@string/lyrics_label"/>
    </ScrollView>

    <fragment android:name="uk.org.ngo.squeezer.NowPlayingFragment"
        android:id="@+id/now_playing_fragment"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        tools:layout="@layout/now_playing_fragment_mini"/>
</LinearLayout>
